--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=store
-spring.datasource.url=jdbc:mysql://localhost:3310/surabdmercado
+spring.datasource.url=jdbc:mysql://localhost/mercadonasura
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
